--- a/CoolCoolCoffee_FrontEnd/android/app/build.gradle
+++ b/CoolCoolCoffee_FrontEnd/android/app/build.gradle
@@ -45,7 +45,7 @@ android {
         applicationId "com.example.coolcoolcoffee_front"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 21
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -64,4 +64,7 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+    implementation 'com.google.mlkit:text-recognition:16.0.0'
+    implementation 'com.google.mlkit:text-recognition-korean:16.0.0'
+}
