--- a/CoolCoolCoffee_FrontEnd/pubspec.yaml
+++ b/CoolCoolCoffee_FrontEnd/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
   image_picker: ^1.0.4
   google_mlkit_text_recognition: ^0.10.0
-  google_ml_kit: ^0.16.2
+  #google_ml_kit: ^0.16.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
