--- a/CoolCoolCoffee_FrontEnd/pubspec.yaml
+++ b/CoolCoolCoffee_FrontEnd/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   image_picker: ^1.0.4
   google_mlkit_text_recognition: ^0.10.0
+  floating_action_bubble: ^1.1.4
   #google_ml_kit: ^0.16.2
 
   # The following adds the Cupertino Icons font to your application.
