--- a/CoolCoolCoffee_FrontEnd/pubspec.yaml
+++ b/CoolCoolCoffee_FrontEnd/pubspec.yaml
@@ -34,11 +34,12 @@ dependencies:
   google_mlkit_text_recognition: ^0.10.0
   floating_action_bubble: ^1.1.4
   #google_ml_kit: ^0.16.2
-
+  cloud_firestore: ^4.10.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^2.17.0
+
 
 dev_dependencies:
   flutter_test:
