--- a/CoolCoolCoffee_FrontEnd/pubspec.yaml
+++ b/CoolCoolCoffee_FrontEnd/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^2.18.0
+  flutter_provider: ^2.1.0
 
 
 dev_dependencies:
@@ -64,7 +65,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
