--- a/CoolCoolCoffee_FrontEnd/android/build.gradle
+++ b/CoolCoolCoffee_FrontEnd/android/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.13'
         // END: FlutterFire Configuration
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        //implementation 'androidx.health:health-connect-client:1.0.0-alpha01'
     }
 }
 
