--- a/CoolCoolCoffee_FrontEnd/pubspec.yaml
+++ b/CoolCoolCoffee_FrontEnd/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^2.18.0
+#  flutter_health_connect: ^1.2.3
+#  permission_handler: ^11.0.1
+#  health: ^8.0.0
 
 
 dev_dependencies:
