realtime으로 사진에서 color palette 추출기능 완료
todo:
- 각 브랜드 별 대표 color 지정하여 브랜드 확인 기능
- 브랜드 구분 완료 후 각 브랜드 별 앱 오더 화면 에서 메뉴 추출

--- a/CoolCoolCoffee_FrontEnd/pubspec.yaml
+++ b/CoolCoolCoffee_FrontEnd/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.18.0
   flutter_provider: ^2.1.0
+  palette_generator: ^0.3.3+3
 
 
 dev_dependencies:
