--- a/CoolCoolCoffee_FrontEnd/pubspec.yaml
+++ b/CoolCoolCoffee_FrontEnd/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.18.0
   flutter_health_connect: ^1.2.3
+  timezone: ^0.9.2
 
 
 dev_dependencies:
