--- a/CoolCoolCoffee_FrontEnd/pubspec.yaml
+++ b/CoolCoolCoffee_FrontEnd/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_core: ^2.18.0
   flutter_health_connect: ^1.2.3
   timezone: ^0.9.2
+  #flutter_sparkline : ^0.1.0
 
 dev_dependencies:
   flutter_test:
