로그인 화면 에러 수정 완료 + userProvider 만듦
to do : 두번째, 세번째 페이지 제작 후 db에 사용자 정보 저장

--- a/CoolCoolCoffee_FrontEnd/pubspec.yaml
+++ b/CoolCoolCoffee_FrontEnd/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.21.0
   firebase_auth: ^4.12.1
+  provider: ^6.1.1
 
 
 dev_dependencies:
