--- a/CoolCoolCoffee_FrontEnd/pubspec.yaml
+++ b/CoolCoolCoffee_FrontEnd/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   timer_builder: ^2.0.0
   firebase_auth: ^4.12.1
   fluttertoast: ^8.2.3
+  flutter_local_notifications: ^13.0.0
 
 dev_dependencies:
   flutter_test:
