--- a/CoolCoolCoffee_FrontEnd/pubspec.yaml
+++ b/CoolCoolCoffee_FrontEnd/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   firebase_auth: ^4.12.1
   fluttertoast: ^8.2.3
   flutter_local_notifications: ^13.0.0
+  fl_chart: ^0.65.0
 
 dev_dependencies:
   flutter_test:
