--- a/CoolCoolCoffee_FrontEnd/ios/Flutter/Generated.xcconfig
+++ b/CoolCoolCoffee_FrontEnd/ios/Flutter/Generated.xcconfig
@@ -1,8 +1,8 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=/Users/eunhwa/flutter
-FLUTTER_APPLICATION_PATH=/Users/eunhwa/coolcoolcoffee_frontend/coolcoolcoffee_frontend
+FLUTTER_ROOT=C:\flutter
+FLUTTER_APPLICATION_PATH=C:\3-2\Capstone\CoolCoolCoffee_FrontEnd\CoolCoolCoffee_FrontEnd
 COCOAPODS_PARALLEL_CODE_SIGN=true
-FLUTTER_TARGET=lib/main.dart
+FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
 FLUTTER_BUILD_NUMBER=1
