--- a/CoolCoolCoffee_FrontEnd/pubspec.yaml
+++ b/CoolCoolCoffee_FrontEnd/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   flutter_local_notifications: ^13.0.0
   url_launcher: ^6.0.9
   fl_chart: ^0.65.0
+  firebase_storage: ^11.5.2
 
 dev_dependencies:
   flutter_test:
