--- a/CoolCoolCoffee_FrontEnd/pubspec.yaml
+++ b/CoolCoolCoffee_FrontEnd/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   url_launcher: ^6.0.9
   fl_chart: ^0.65.0
   firebase_storage: ^11.5.2
+  permission_handler: ^8.3.0
 
 dev_dependencies:
   flutter_test:
