--- a/CoolCoolCoffee_FrontEnd/pubspec.yaml
+++ b/CoolCoolCoffee_FrontEnd/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   fl_chart: ^0.65.0
   firebase_storage: ^11.5.2
   permission_handler: ^8.3.0
+  toggle_switch: ^2.1.0
+
 
 dev_dependencies:
   flutter_test:
