앱 아이콘 적용 완료

--- a/CoolCoolCoffee_FrontEnd/flutter_launcher_icons.yaml
+++ b/CoolCoolCoffee_FrontEnd/flutter_launcher_icons.yaml
@@ -1,5 +1,4 @@
 flutter_launcher_icons:
-  ios: "launcher_icon"
-  android: true
+  android: "ic_launcher"
   image_path: "assets/images/app_icon.png"
-  remove_alpha_ios: true
+  ios: false
