--- a/CoolCoolCoffee_FrontEnd/flutter_launcher_icons.yaml
+++ b/CoolCoolCoffee_FrontEnd/flutter_launcher_icons.yaml
@@ -1,5 +1,4 @@
 flutter_launcher_icons:
-  ios: true
+  ios: flase
   android: true
   image_path: "assets/images/app_icon.png"
-  remove_alpha_ios: true
