ios, macos, window, linux, web 필요 없는 os 들 지우기 + 앱 이름 쿨쿨커피로 변경

--- a/CoolCoolCoffee_FrontEnd/android/app/src/main/AndroidManifest.xml
+++ b/CoolCoolCoffee_FrontEnd/android/app/src/main/AndroidManifest.xml
@@ -78,7 +78,7 @@
     <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
 
     <application
-        android:label="coolcoolcoffee_front"
+        android:label="쿨쿨커피"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
